# graduation-thesis-nonspeech-visualization

./: .gitignore  .prettierrc  index.html  readme.md
backend/: main.py  pyproject.toml
backend/model/: AudioCaps_Dataset.py  CNN14.py  Clotho_Dataset.py  Transformer.py  model.py  pytorch_utils.py  util.py
css/: component.css  layout.css
frontend/: index.html
frontend/css/: base.css  component.css
frontend/js/: app.js
frontend/js/ui/: styleEditor.js  styleItem.js  timeline.js  videoPlayer.js
frontend/js/utils/: fileHandler.js  format.js
js/: app.js  elements.js  store.js
js/ui/: dropzone.js  styleList.js  timeline.js  videoPlayer.js
js/utils/: trimVideo.js
